--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	"dependencies": {
 		"@babel/preset-env": "^7.6.3",
 		"@babel/preset-react": "^7.6.3",
+		"@fortawesome/fontawesome-svg-core": "^1.2.25",
+		"@fortawesome/free-solid-svg-icons": "^5.11.2",
+		"@fortawesome/react-fontawesome": "^0.1.7",
 		"babel-loader": "^8.0.6",
 		"docz": "^2.0.0-rc.57",
 		"prop-types": "^15.7.2",
