--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"react": "^16.10.2",
 		"react-dom": "^16.10.2",
 		"react-tiny-popover": "^3.4.5",
-		"styled-components": "^4.4.1"
+		"styled-components": "^4.4.1",
+		"typedoc-plugin-internal-external": "^2.0.2"
 	},
 	"devDependencies": {
 		"@types/react": "^16.9.9",
@@ -52,6 +53,7 @@
 		"source-map-loader": "^0.2.4",
 		"sourcemap-codec": "^1.4.6",
 		"ts-loader": "^6.2.0",
+		"typedoc": "^0.15.3",
 		"typescript": "^3.6.4",
 		"webpack": "^4.41.2"
 	}
