--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"docz:dev": "docz dev",
 		"docz:build": "docz build",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"meta": "node tools/parse-jsdocs"
 	},
 	"keywords": [
 		"canvas",
