--- a/package.json
+++ b/package.json
@@ -20,27 +20,29 @@
 	"author": "Joseph Stewart",
 	"license": "ISC",
 	"dependencies": {
-		"@babel/preset-env": "^7.6.3",
-		"@babel/preset-react": "^7.6.3",
 		"@fortawesome/fontawesome-svg-core": "^1.2.25",
 		"@fortawesome/free-solid-svg-icons": "^5.11.2",
 		"@fortawesome/react-fontawesome": "^0.1.7",
 		"@types/styled-components": "^4.4.0",
-		"babel-loader": "^8.0.6",
-		"docz": "^2.0.0-rc.57",
 		"prop-types": "^15.7.2",
 		"prop-types-ts": "^0.6.2",
-		"react": "^16.10.2",
-		"react-dom": "^16.10.2",
 		"react-tiny-popover": "^3.4.5",
 		"styled-components": "^4.4.1",
 		"typedoc-plugin-internal-external": "^2.0.2"
 	},
+	"peerDependencies": {
+		"react": "^16.10.2",
+		"react-dom": "^16.10.2"
+	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.6.3",
+		"@babel/preset-react": "^7.6.3",
 		"@types/react": "^16.9.9",
 		"@types/react-dom": "^16.9.2",
 		"@typescript-eslint/eslint-plugin": "^2.4.0",
 		"@typescript-eslint/parser": "^2.4.0",
+		"babel-loader": "^8.0.6",
+		"docz": "^2.0.0-rc.57",
 		"eslint": "^6.5.1",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.4.0",
@@ -51,6 +53,8 @@
 		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-react": "^7.16.0",
 		"prettier": "^1.18.2",
+		"react": "^16.10.2",
+		"react-dom": "^16.10.2",
 		"react-markdown": "^4.2.2",
 		"source-map-loader": "^0.2.4",
 		"sourcemap-codec": "^1.4.6",
