--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.11.2",
 		"@fortawesome/react-fontawesome": "^0.1.7",
 		"@types/styled-components": "^4.4.0",
+		"eslint-plugin-jest": "^23.3.0",
 		"prop-types": "^15.7.2",
 		"prop-types-ts": "^0.6.2",
 		"react-tiny-popover": "^3.4.5",
@@ -37,6 +38,7 @@
 	"devDependencies": {
 		"@babel/preset-env": "^7.6.3",
 		"@babel/preset-react": "^7.6.3",
+		"@types/jest": "^24.0.25",
 		"@types/react": "^16.9.9",
 		"@types/react-dom": "^16.9.2",
 		"@typescript-eslint/eslint-plugin": "^2.4.0",
@@ -52,12 +54,14 @@
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-react": "^7.16.0",
+		"jest": "^24.9.0",
 		"prettier": "^1.18.2",
 		"react": "^16.10.2",
 		"react-dom": "^16.10.2",
 		"react-markdown": "^4.2.2",
 		"source-map-loader": "^0.2.4",
 		"sourcemap-codec": "^1.4.6",
+		"ts-jest": "^24.3.0",
 		"ts-loader": "^6.2.0",
 		"typedoc": "^0.15.3",
 		"typescript": "^3.6.4",
