Add unit test for pointInsidePolygon

--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
 		"@types/jest": "^24.0.25",
 		"@types/react": "^16.9.9",
 		"@types/react-dom": "^16.9.2",
-		"@typescript-eslint/eslint-plugin": "^2.4.0",
-		"@typescript-eslint/parser": "^2.4.0",
+		"@typescript-eslint/eslint-plugin": "^2.15.0",
+		"@typescript-eslint/parser": "^2.15.0",
 		"babel-loader": "^8.0.6",
 		"docz": "^2.0.0-rc.57",
-		"eslint": "^6.5.1",
+		"eslint": "6.8.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.4.0",
 		"eslint-import-resolver-typescript": "^2.0.0",
@@ -55,7 +55,7 @@
 		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-react": "^7.16.0",
 		"jest": "^24.9.0",
-		"prettier": "^1.18.2",
+		"prettier": "1.19.1",
 		"react": "^16.10.2",
 		"react-dom": "^16.10.2",
 		"react-markdown": "^4.2.2",
@@ -64,7 +64,7 @@
 		"ts-jest": "^24.3.0",
 		"ts-loader": "^6.2.0",
 		"typedoc": "^0.15.3",
-		"typescript": "^3.6.4",
+		"typescript": "^3.7.4",
 		"webpack": "^4.41.2"
 	}
 }
