--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"@typescript-eslint/eslint-plugin": "^2.15.0",
 		"@typescript-eslint/parser": "^2.15.0",
 		"babel-loader": "^8.0.6",
-		"docz": "^2.0.0-rc.57",
+		"docz": "^2.2.0",
 		"eslint": "6.8.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.4.0",
