--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
 		"meta": "node tools/parse-jsdocs",
 		"dev": "yarn meta && yarn docz:dev",
-		"build": "webpack"
+		"build": "tsc"
 	},
 	"keywords": [
 		"canvas",
