--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 			"node_modules/@types"
 		],
 		"jsx": "react",
+		"esModuleInterop": true,
 	},
 	"compileOnSave": true,
 	"skipLibCheck": true,
