--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"docz:dev": "docz dev",
 		"docz:build": "yarn meta && docz build",
+		"docz:publish": "git checkout master && git checkout netlify && git pull origin master && git push origin netlify && git checkout master",
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
 		"meta": "node tools/parse-jsdocs",
 		"dev": "yarn meta && yarn docz:dev",
