Ignore compiler errors when building

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,7 @@
 		"noImplicitReturns": true,
 		"outDir": "dist",
 		"sourceMap": true,
-		"typeRoots": [
-			"node_modules/@types"
-		],
+		"skipLibCheck": true,
 		"jsx": "react",
 		"esModuleInterop": true,
 	},
