--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-super-canvas",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"description": "An API for creating powerful canvas based editors",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -81,6 +81,7 @@
 	"files": [
 		"dist/*",
 		"index.js",
-		"defaults.js"
+		"defaults.js",
+		"shapes-util.js"
 	]
 }
